--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,3 +1,14 @@
+// -----------colors------------
+
 $color-primary: #ff9800;
 $color-dark: #0000;
 $color-white: #fff;
+$nav-box-shadow: 0 15px 40px -20px rgb(40 44 63 / 15%);
+$color-secondary: #523d3d;
+
+// -----------screen height - width --------------
+
+$global-screen-width: 75rem;
+
+// -----------------font-size---------------------
+$nav-link-font-size: 17px;
