--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -5,6 +5,8 @@ $color-dark: #0000;
 $color-white: #fff;
 $nav-box-shadow: 0 15px 40px -20px rgb(40 44 63 / 15%);
 $color-secondary: #523d3d;
+$text-primary: #282c3f;
+$text-light: #686b78;
 
 // -----------screen height - width --------------
 
