--- a/components/core/Navbar/Navbar.module.scss
+++ b/components/core/Navbar/Navbar.module.scss
@@ -11,11 +11,23 @@
     @include flex-style(space-between, false);
 
     .logo_location_section {
-      @include restrict-text-select;
-      width: 30%;
-      cursor: pointer;
-      img {
-        pointer-events: none;
+      position: relative;
+      .logo_container {
+        width: 30%;
+        cursor: pointer;
+        img {
+          @include restrict-text-select;
+          pointer-events: none;
+        }
+      }
+      .geoLocation_container {
+        position: absolute;
+        cursor: pointer;
+        color: $text-primary;
+        top: 40%;
+        left: 105%;
+        width: 250px;
+        @include restrict-text-select;
       }
     }
     .nav_links {
