--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,7 +1,7 @@
 // -----------colors------------
 
 $color-primary: #ff9800;
-$color-dark: #0000;
+$color-dark: rgb(0, 0, 0);
 $color-white: #fff;
 $nav-box-shadow: 0 15px 40px -20px rgb(40 44 63 / 15%);
 $color-secondary: #523d3d;
