--- a/components/core/Navbar/Navbar.module.scss
+++ b/components/core/Navbar/Navbar.module.scss
@@ -44,6 +44,7 @@
         color: $color-secondary;
 
         li {
+          position: relative;
           color: inherit;
           list-style: none;
           font-weight: 500;
@@ -53,12 +54,21 @@
           padding: 8px 15px;
           @include flex-style(space-evenly, center);
           @include restrict-text-select;
+          height: 100%;
           transition: all 0.1s ease-in-out;
           &:hover {
             color: $color-primary;
           }
           &:focus {
             color: $color-primary;
+          }
+          .underline {
+            position: absolute;
+            bottom: -1px;
+            left: 0;
+            right: 0;
+            height: 2px;
+            background: $color-primary;
           }
         }
       }
