--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -7,6 +7,7 @@ $nav-box-shadow: 0 15px 40px -20px rgb(40 44 63 / 15%);
 $color-secondary: #523d3d;
 $text-primary: #282c3f;
 $text-light: #686b78;
+$color-danger: #ff0000;
 
 // -----------screen height - width --------------
 
